Closed Bug 1147400 Opened 9 years ago Closed 9 years ago

call failed to connect (link clicker could hear me, but link generator got no video/audio)

Categories

(Core :: WebRTC: Signaling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: Gavin, Assigned: bwc)

References

Details

Attachments

(1 file, 1 obsolete file)

I invited Standard8 to join my room (I generated the link and he clicked it). He joined, I got a notification, and he apparently could hear/see me, but all I ever saw was a grey screen, and couldn't hear him. Eventually my UI gave me:

"The stream was unable to connect due to a network error. Make sure your connection isn't blocked by a firewall."

I'll attach about:webrtc logs.
Whilst I was on the conversation with Gavin, I was using Nightly build (today's). We failed to connect three times in a row. On the error console was:

14:11:02.756 "Error while setting RemoteDescription InvalidSessionDescriptionError: Answer changes mid for level, was 'sdparta_0', now ''" sdk.js:1409:12

I tested with Gavin on aurora, which has the same version of the sdk as nightly, and that also failed.

This looks like it could be a regression from bug 1144432. I can attach more logs if necessary.
Blocks: 1144432
Component: General → WebRTC: Signaling
Flags: needinfo?(drno)
Flags: needinfo?(docfaraday)
Product: Loop → Core
What version was on the other end? I can see this happening when the other end doesn't support mid. Any logs containing the SDP would tell me for sure.
Flags: needinfo?(docfaraday)
Attached file MozReview Request: bz://1147400/bwc (obsolete) —
/r/6069 - Bug 1147400: Do not check mid in answer if not present.

Pull down this commit:

hg pull review -r f48afdbd058da77b204ddb03270c856ed753cdb3
Comment on attachment 8583138 [details]
MozReview Request: bz://1147400/bwc

https://treeherder.mozilla.org/#/jobs?repo=try&revision=a02c2aeb24b0
Attachment #8583138 - Flags: review?(drno)
Assignee: nobody → docfaraday
Flags: needinfo?(drno)
Seeing some infra bustage on try, retriggering some stuff.
Flags: needinfo?(docfaraday)
Comment on attachment 8583138 [details]
MozReview Request: bz://1147400/bwc

Now review board has apparently decided to publish my review comment, but not the "ship it" flag. Thanks to this awesome integration I have double work now.
Attachment #8583138 - Flags: review?(drno) → review+
Still waiting on the OS X debug M3 to finish, and inbound to reopen. Leaving checkin to the sheriff.
Flags: needinfo?(docfaraday)
Keywords: checkin-needed
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/97134d07092a
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Byron, Can you write the aurora approval for this bug to go along with the uplift request for bug 1144432?
Flags: needinfo?(docfaraday)
Comment on attachment 8583138 [details]
MozReview Request: bz://1147400/bwc

Approval Request Comment

See approval request in bug 1144432
Flags: needinfo?(docfaraday)
Attachment #8583138 - Flags: approval-mozilla-aurora?
Attachment #8583138 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #8583138 - Attachment is obsolete: true
Attachment #8619868 - Flags: review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: