Bug 1147400: Do not check mid in answer if not present. r=drno